k8s-rpi-apps-ingress/photoprism-ingress/photoprism-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism-s3-shared
  labels:
    app.kubernetes.io/name: photoprism-s3
  annotations:
    service.cilium.io/global: "true"    
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 2342
  selector:
    app.kubernetes.io/name: photoprism-s3
