k8s-rpi-apps-ingress/photoprism-ingress/photoprism-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism-s3-shared
  annotations:
    avp.kubernetes.io/path: "k8secrets/ingresses"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: <photoprismhostname>.<domainname>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: photoprism-s3-shared
              port:
                number: 80
